# OpticalReconstruction

./: README.md
OpticalReconstruction/: BRDF.cpp  BRDF.h  CMakeLists.txt  Camera.cpp  Camera.h  Color.cpp  Color.h  Curve.cpp  Curve.h  Geometry.cpp  Geometry.h  Gradient.cpp  Gradient.h  Light.cpp  Light.h  Material.cpp  Material.h  Math.h  Ray.h  Render.cpp  Render.h  Scene.cpp  Scene.h  SurfaceOpticProperties.cpp  SurfaceOpticProperties.h  main.cpp  structs.h
OpticalReconstruction/cornel_box0/: Curve.txt  camera.txt  camera_cube.txt  camera_plane_test.txt  cameras_test.txt  cornel_box0.shp  cornel_box0_plane.shp  lights.txt  materials.txt  optical_model.txt  optical_model_plane.txt
OpticalReconstruction/cornel_box0/small_cube_camera/: cornel_box0.shp  cube_materials.txt  small_cube.txt
OpticalReconstruction/cornel_box0/whole_scene/: whole_scene_camera.txt
OpticalReconstruction/result/: createGraph.py
Scripts/: txt2radiance.py
